--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: clima
-description: A new Flutter application.
+description: A location-based weather application made on Flutter.
 
 version: 1.0.0+1
 
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  geolocator: ^6.0.0+4
 
 dev_dependencies:
   flutter_test:
